# ParallelComputing

./: CMakeLists.txt
.history/: CMakeLists_20180128202158.txt  CMakeLists_20180130130217.txt  CMakeLists_20180130142519.txt  CMakeLists_20180130144531.txt  CMakeLists_20180130144535.txt  CMakeLists_20180130144612.txt  CMakeLists_20180130144628.txt  CMakeLists_20180130144649.txt  CMakeLists_20180130155047.txt  CMakeLists_20180130155149.txt  Kernel_20180127095124.hpp  Kernel_20180127095311.hpp  Kernel_20180127100327.hpp  Kernel_20180127100401.hpp  Kernel_20180127100411.hpp  Kernel_20180127100517.hpp  Kernel_20180127100528.hpp  Kernel_20180127100902.hpp  Kernel_20180127101002.hpp  Kernel_20180127101021.hpp  Kernel_20180127101037.hpp  Kernel_20180127101129.hpp  Kernel_20180127101139.hpp  Kernel_20180127101202.hpp  Kernel_20180127102131.hpp  Kernel_20180127102228.hpp  Kernel_20180127102232.hpp  Kernel_20180127102248.hpp  Kernel_20180127102334.hpp  Kernel_20180127102342.hpp  Kernel_20180127102349.hpp  Kernel_20180127102407.hpp  Kernel_20180127102420.hpp  Kernel_20180127102441.hpp  Kernel_20180127102453.hpp  Kernel_20180127102456.hpp  Kernel_20180127102503.hpp  Kernel_20180127102522.hpp  Kernel_20180127102529.hpp  Kernel_20180127102531.hpp  (+587 more)
.history/connected_components/: parallel_neighbor_20180130144005.cpp  parallel_neighbor_20180130144028.cpp  parallel_neighbor_20180130144808.cpp  (+414 more)
connected_components/: camera_pccl.cpp  camera_serial.cpp  parallel_neighbor.cpp  pccl.cl  serial_twostage.cpp  twostage_pccl.cpp
ocl/: ocl_kernel.hpp
parallel_reduce/: parallel_reduce.cpp
(+78 files in other folders)
